feat: Добавлен тихий режим для бота без прав администратора
- Добавлен сервис IBotPermissionsService для проверки прав бота
- Реализована логика тихого режима: бот читает сообщения, но не пишет в чат
- Добавлен префикс '🔇 Тихий режим' к уведомлениям в админке
- Бот продолжает анализировать сообщения для обучения
- Кэширование прав бота (30 мин для успеха, 5 мин для ошибок)
- Исключения: админ-чаты и приватные чаты работают в обычном режиме
- Все тесты проходят (515/515 успешно)

Изменения:
- ClubDoorman/Services/IBotPermissionsService.cs (новый)
- ClubDoorman/Services/BotPermissionsService.cs (новый)
- ClubDoorman/Handlers/MessageHandler.cs
- ClubDoorman/Services/ITelegramBotClientWrapper.cs
- ClubDoorman/Services/TelegramBotClientWrapper.cs
- ClubDoorman/Models/Notifications/AdminNotificationType.cs
- ClubDoorman/Services/LoggingConfigurationService.cs
- ClubDoorman/Program.cs
- ClubDoorman.Test/TestInfrastructure/FakeTelegramClient.cs
- ClubDoorman.Test/TestInfrastructure/MessageHandlerTestFactory.cs

--- a/ClubDoorman/data/chat_settings.json
+++ b/ClubDoorman/data/chat_settings.json
@@ -28,5 +28,9 @@
   "-4829729373": {
     "type": "default",
     "title": "test_c#_bot_Log"
+  },
+  "-4911370766": {
+    "type": "default",
+    "title": "Test_group_02"
   }
 }
