--- a/ClubDoorman/env.example
+++ b/ClubDoorman/env.example
@@ -33,3 +33,9 @@ DOORMAN_WHITELIST=
 
 # Группы без рекламы VPN (через запятую)
 NO_VPN_AD_GROUPS= 
+
+# Группы с отключенной капчей (через запятую)
+DOORMAN_NO_CAPTCHA_GROUPS=
+
+# Удаление пересланных сообщений от новичков (true/false)
+DOORMAN_DELETE_FORWARDED_MESSAGES=false 
