Add baseline file to GitLeaks allowlist

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -25,6 +25,7 @@ allowlist = [
     '''test_bot.sh''',
     '''run_with_real_token.sh''',
     '''ClubDoorman/.env''',
+    '''.gitleaks.baseline.json''',
     '''scripts/run_tests*.sh''',
     '''ClubDoorman.Test/''',
     '''plans/''',
