--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -24,6 +24,8 @@ allowlist = [
     '''run_with_real_token.sh.example''',
     '''test_bot.sh''',
     '''run_with_real_token.sh''',
+    '''**/test_bot.sh''',
+    '''**/run_with_real_token.sh''',
     '''ClubDoorman/.env''',
     '''.gitleaks.baseline.json''',
     '''scripts/run_tests*.sh''',
