feat: перенос логики Мамая на инфраструктуру Phase 2 - часть 2
- Исправлен баг с удалением сообщений 'вошёл в чат' при провале капчи
- Использование aiProfileData вместо userMessage для корректного удаления
- Все изменения перенесены с сохранением архитектуры Request объектов
- Настроен gitleaks baseline для игнорирования тестовых токенов

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -26,6 +26,8 @@ allowlist = [
     '''run_with_real_token.sh''',
     '''**/test_bot.sh''',
     '''**/run_with_real_token.sh''',
+    '''./test_bot.sh''',
+    '''./run_with_real_token.sh''',
     '''ClubDoorman/.env''',
     '''.gitleaks.baseline.json''',
     '''scripts/run_tests*.sh''',
