--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -33,6 +33,7 @@ allowlist = [
     '''scripts/run_tests*.sh''',
     '''ClubDoorman.Test/''',
     '''plans/''',
+    '''plans/phase2-test-analysis/df733b7-code-diff.txt''',
     '''AI_PROFILE_CHECKS.md''',
     '''.env.sample''',
     '''docker-compose.yml.example''',
