--- a/.github/workflows/real-api-tests.yml
+++ b/.github/workflows/real-api-tests.yml
@@ -1,21 +1,13 @@
-name: E2E Tests with Secrets
+name: Real API Tests
 
 on:
-  pull_request:
-    branches: [ "*" ]
-  push:
-    branches: [ "main", "develop" ]
+  workflow_dispatch: # Ручной запуск
+  schedule:
+    - cron: '0 2 * * *' # Каждый день в 2:00 UTC
 
 jobs:
-  e2e-tests:
+  real-api-tests:
     runs-on: ubuntu-latest
-    
-    # Запускаем только если есть изменения в тестах или основном коде
-    if: |
-      contains(github.event.head_commit.modified, 'ClubDoorman.Test/') ||
-      contains(github.event.head_commit.modified, 'ClubDoorman/') ||
-      contains(github.event.head_commit.added, 'ClubDoorman.Test/') ||
-      contains(github.event.head_commit.added, 'ClubDoorman/')
 
     steps:
     - uses: actions/checkout@v3
@@ -44,15 +36,7 @@ jobs:
     - name: Build application
       run: dotnet build --configuration Release --no-restore
 
-    - name: Run E2E tests (without real API)
-      run: |
-        dotnet test ClubDoorman.Test/ClubDoorman.Test.csproj \
-          --filter "Category=e2e&Category!=real-api" \
-          --verbosity normal \
-          --logger "console;verbosity=detailed" \
-          --no-restore
-
-    - name: Run AI Analysis tests with real API
+    - name: Run Real API tests
       run: |
         dotnet test ClubDoorman.Test/ClubDoorman.Test.csproj \
           --filter "Category=real-api" \
@@ -73,8 +57,8 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: test-results
+        name: real-api-test-results
         path: |
           ClubDoorman.Test/TestResults/
           *.trx
-        retention-days: 7 
+        retention-days: 30 
