feat: Add debug logging for CI/CD secrets without exposing sensitive data
- Add secret availability checks in GitHub Actions workflow
- Add masked debug logging in AI analysis tests
- Show whether secrets are configured without exposing actual values
- Add test_output.txt to .gitignore to prevent token leaks
- Update gitleaks baseline with current repository state

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,6 +23,27 @@ jobs:
 
     - name: Create .env file from secrets
       run: |
+        # Проверяем наличие секретов (без показа их значений)
+        echo "=== Проверка секретов ==="
+        if [ -n "${{ secrets.DOORMAN_OPENROUTER_API }}" ]; then
+          echo "DOORMAN_OPENROUTER_API: настроен"
+        else
+          echo "DOORMAN_OPENROUTER_API: НЕ НАСТРОЕН"
+        fi
+        
+        if [ -n "${{ secrets.DOORMAN_BOT_API }}" ]; then
+          echo "DOORMAN_BOT_API: настроен"
+        else
+          echo "DOORMAN_BOT_API: НЕ НАСТРОЕН"
+        fi
+        
+        if [ -n "${{ secrets.DOORMAN_ADMIN_CHAT }}" ]; then
+          echo "DOORMAN_ADMIN_CHAT: настроен"
+        else
+          echo "DOORMAN_ADMIN_CHAT: НЕ НАСТРОЕН"
+        fi
+        
+        # Создаем .env файл с fallback значениями
         cat > ClubDoorman/.env << EOF
         DOORMAN_OPENROUTER_API=${{ secrets.DOORMAN_OPENROUTER_API }}
         DOORMAN_BOT_API=${{ secrets.DOORMAN_BOT_API }}
