fixed environment settings in e2e-tests workflow

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest
-    
+    environment: Spampyre-dotnet9
     # Запускаем для всех pull request'ов и push в основные ветки
     # Убираем ограничение по измененным файлам, так как оно не работает для PR
 
