feat: добавлен фильтр ссылок. Удаление и пересылка в ЛОГ-ЧАТ с кнопками-реакциями. Потребовалось реализовать новый метод DeleteAndReportToLogChat для реализации новой логики.

--- a/ClubDoorman/env.example
+++ b/ClubDoorman/env.example
@@ -38,4 +38,7 @@ NO_VPN_AD_GROUPS=
 DOORMAN_NO_CAPTCHA_GROUPS=
 
 # Удаление пересланных сообщений от новичков (true/false)
-DOORMAN_DELETE_FORWARDED_MESSAGES=false 
+DOORMAN_DELETE_FORWARDED_MESSAGES=false
+
+# Фильтр ссылок (true/false)
+DOORMAN_TEXT_MENTION_FILTER_ENABLE=true 
