feat(moderation): автобан за повторные нарушения ML фильтров Добавлен ViolationTracker для отслеживания нарушений пользователей Автобан при достижении лимита нарушений (ML спам, стоп-слова, эмодзи, похожие символы) Параметризованы лимиты через конфигурацию (DOORMAN__VIOLATIONS_BEFORE_BAN) Уведомления о бане с возможностью отправки в админ-чат или лог-чат Уведомления теперь реплаи на пересланные сообщения Счетчики нарушений сбрасываются после бана Closes #76

--- a/.env.sample
+++ b/.env.sample
@@ -34,3 +34,17 @@ DOORMAN_GROUP_APPROVAL_MODE=true
 # Фильтрация медиа
 DOORMAN_DISABLE_MEDIA_FILTERING=true
 #DOORMAN_MEDIA_FILTERING_DISABLED_CHATS=
+
+DOORMAN_DELETE_FORWARDED_MESSAGES=true
+
+# Фильтр гиперссылок на профили пользователей (true/false)
+DOORMAN_TEXT_MENTION_FILTER_ENABLE=true
+
+# Количество повторных нарушений перед баном (0 = отключено)
+DOORMAN_ML_VIOLATIONS_BEFORE_BAN=4
+DOORMAN_STOP_WORDS_VIOLATIONS_BEFORE_BAN=3
+DOORMAN_EMOJI_VIOLATIONS_BEFORE_BAN=2
+DOORMAN_LOOKALIKE_VIOLATIONS_BEFORE_BAN=2
+
+# Уведомления о банах при повторных нарушениях. По умолчанию - в лог-чат.
+DOORMAN_REPEATED_VIOLATIONS_BAN_TO_ADMIN_CHAT=false
