--- a/ClubDoorman/env.example
+++ b/ClubDoorman/env.example
@@ -41,4 +41,10 @@ DOORMAN_NO_CAPTCHA_GROUPS=
 DOORMAN_DELETE_FORWARDED_MESSAGES=false
 
 # Фильтр ссылок (true/false)
-DOORMAN_TEXT_MENTION_FILTER_ENABLE=true 
+DOORMAN_TEXT_MENTION_FILTER_ENABLE=true
+
+# Количество повторных нарушений перед баном (0 = отключено)
+DOORMAN_ML_VIOLATIONS_BEFORE_BAN=4
+DOORMAN_STOP_WORDS_VIOLATIONS_BEFORE_BAN=3
+DOORMAN_EMOJI_VIOLATIONS_BEFORE_BAN=2
+DOORMAN_LOOKALIKE_VIOLATIONS_BEFORE_BAN=2 
