--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -40,6 +40,9 @@
         <None Update="test-timeouts.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="specflow.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
