fix: resolve MSBuild logger issue in CI
- Fix MSBuild logger error by using single-line command format
- Remove multi-line command that caused ArgumentOutOfRangeException
- Use proper filter syntax: Category!=real-api&Category!=BDD
- Add .actrc file for local GitHub Actions testing
- Ensure CI runs only unit tests, excluding BDD and real-api tests

The issue was caused by MSBuild logger trying to wrap long command lines
with ampersands, which caused ArgumentOutOfRangeException in CI environment.
Single-line format resolves this issue while maintaining proper test filtering.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Run tests
-      run: dotnet test --no-restore
+      run: dotnet test --no-restore --filter "Category!=real-api&Category!=BDD" --verbosity quiet --logger "console;verbosity=quiet" --logger "trx;LogFileName=test-results.trx"
