feat: improve mutation testing coverage and exclude demo tests
✅ Demo tests exclusion:
- Added DefaultTestCaseFilter to exclude demo tests by default
- Created run_tests_without_demos.sh script
- Demo tests (756 -> 791 total) now excluded from normal test runs

✅ Mutation coverage improvements:
- Added MessageHandlerMutationCoverageTests.cs with 6 targeted tests
- Covers critical uncovered lines: 856-857, 870, 893, 903 in MessageHandler
- Uses TestKit tagged system with TestKitBuilders pattern
- Added TestCategories.MutationCoverage category

🎯 Critical issues addressed:
- Exception handling in chat type detection (lines 856-857)
- Private chat ban attempt logging (line 870)
- Conditional ban type logic temporary vs permanent (line 893)
- Log notification for null userJoinMessage (line 903)

📊 Target: Improve mutation score from 46.2% towards 80%
- 202 survived mutants -> targeted coverage for critical paths
- 158 no-coverage mutants -> focused on ban logic gaps

--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -9,6 +9,8 @@
         <IsTestProject>true</IsTestProject>
         <RunTestsInParallel>true</RunTestsInParallel>
         <MaxCpuCount>4</MaxCpuCount>
+        <!-- Исключаем demo тесты из обычного запуска -->
+        <DefaultTestCaseFilter Condition="'$(IncludeDemoTests)' != 'true'">Category!=demo</DefaultTestCaseFilter>
         <!-- Временно отключаем предупреждения для разработки -->
         <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
         <WarningsAsErrors />
