--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -37,6 +37,7 @@
         <PackageReference Include="Bogus" Version="35.4.0" />
         <PackageReference Include="AutoFixture" Version="4.18.1" />
         <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
+        <PackageReference Include="Verify" Version="30.5.0" />
         <PackageReference Include="Verify.NUnit" Version="30.5.0" />
     </ItemGroup>
 
