--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Run tests
-      run: dotnet test ClubDoorman.Test --settings ClubDoorman.Test/.runsettings --no-restore --filter "Category!=real-api&Category!=BDD" --verbosity quiet --logger "console;verbosity=quiet" --logger "trx;LogFileName=test-results.trx"
+      run: dotnet test ClubDoorman.Test --settings ClubDoorman.Test/.runsettings --no-restore --filter "Category!=real-api&Category!=BDD&Category!=disabled" --verbosity quiet --logger "console;verbosity=quiet" --logger "trx;LogFileName=test-results.trx"
