--- a/ClubDoorman/ClubDoorman.csproj
+++ b/ClubDoorman/ClubDoorman.csproj
@@ -19,15 +19,16 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.8.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
-    <PackageReference Include="Polly" Version="8.6.2" />
+    <PackageReference Include="Polly" Version="8.6.3" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="System.Runtime.Caching" Version="9.0.8" />
-    <PackageReference Include="Telegram.Bot" Version="22.6.0" />
+    <PackageReference Include="Telegram.Bot" Version="22.6.2" />
     <PackageReference Include="tryAGI.OpenAI" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
