--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <InvariantGlobalization>false</InvariantGlobalization>
@@ -12,9 +12,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NUnit" Version="4.4.0" />
-    <PackageReference Include="NUnit.Analyzers" Version="4.10.0">
+    <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -27,17 +27,8 @@
     <ProjectReference Include="..\ClubDoorman\ClubDoorman.csproj" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec
-      Command="cp -n &quot;$(SolutionDir)ClubDoorman/data/stop-words.txt&quot; &quot;$(TargetDir)data/stop-words.txt&quot;"
-      Condition="'$(OS)' != 'Windows_NT'"
-    />
-    <Exec
-      Command="if not exist &quot;$(TargetDir)data&quot; mkdir &quot;$(TargetDir)data&quot;"
-      Condition="'$(OS)' == 'Windows_NT'"
-    />
-    <Exec
-      Command="copy &quot;$(SolutionDir)ClubDoorman\\data\\stop-words.txt&quot; &quot;$(TargetDir)data\\stop-words.txt&quot;"
-      Condition="'$(OS)' == 'Windows_NT'"
-    />
+    <Exec Command="cp -n &quot;$(SolutionDir)ClubDoorman/data/stop-words.txt&quot; &quot;$(TargetDir)data/stop-words.txt&quot;" Condition="'$(OS)' != 'Windows_NT'" />
+    <Exec Command="if not exist &quot;$(TargetDir)data&quot; mkdir &quot;$(TargetDir)data&quot;" Condition="'$(OS)' == 'Windows_NT'" />
+    <Exec Command="copy &quot;$(SolutionDir)ClubDoorman\\data\\stop-words.txt&quot; &quot;$(TargetDir)data\\stop-words.txt&quot;" Condition="'$(OS)' == 'Windows_NT'" />
   </Target>
 </Project>
