--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,14 +1,23 @@
 services:
   doorman:
-    image: ghcr.io/tiraelsedai/clubdoorman:latest
+    image: ghcr.io/expressionist/clubdoorman:latest
     container_name: doorman
     environment:
       - TZ=Europe/Moscow
       - DOORMAN_CLUB_SERVICE_TOKEN=${DOORMAN_CLUB_SERVICE_TOKEN}
       - DOORMAN_BOT_API=${DOORMAN_BOT_API}
+      - DOORMAN_OPENROUTER_API=${DOORMAN_OPENROUTER_API}
       - DOORMAN_ADMIN_CHAT=${DOORMAN_ADMIN_CHAT}
       - DOORMAN_BLACKLIST_AUTOBAN_DISABLE=${DOORMAN_BLACKLIST_AUTOBAN_DISABLE}
+      - DOORMAN_CHANNELS_AUTOBAN_DISABLE=${DOORMAN_CHANNELS_AUTOBAN_DISABLE}
+      - DOORMAN_LOOKALIKE_AUTOBAN_DISABLE=${DOORMAN_LOOKALIKE_AUTOBAN_DISABLE}
       - DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=${DOORMAN_LOW_CONFIDENCE_HAM_ENABLE}
+      - DOORMAN_APPROVE_BUTTON=${DOORMAN_APPROVE_BUTTON}
+      - DOORMAN_BUTTON_AUTOBAN_DISABLE=${DOORMAN_BUTTON_AUTOBAN_DISABLE}
+      - DOORMAN_HIGH_CONFIDENCE_AUTOBAN_DISABLE=${DOORMAN_HIGH_CONFIDENCE_AUTOBAN_DISABLE}
+      - DOORMAN_CHANNEL_AUTOBAN_EXCLUSION=${DOORMAN_CHANNEL_AUTOBAN_EXCLUSION}
+      - DOORMAN_CHANNELS_IGNORE_REPORT=${DOORMAN_CHANNELS_IGNORE_REPORT}
+
     volumes:
-      - ./ClubDoorman/data:/app/data
+      - /home/ClubDoorman/data:/app/data
     restart: unless-stopped
