minor changes in samples

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,14 @@
 DOORMAN_CLUB_SERVICE_TOKEN=
-DOORMAN_BOT_API=1234
-DOORMAN_ADMIN_CHAT=-1234
-DOORMAN_BLACKLIST_AUTOBAN_DISABLE=1
+DOORMAN_BOT_API=hashHashhash
+DOORMAN_ADMIN_CHAT=-12345
+DOORMAN_OPENROUTER_API=keyKEYkey
+DOORMAN_BLACKLIST_AUTOBAN_DISABLE=0
+DOORMAN_CHANNELS_AUTOBAN_DISABLE=1
+DOORMAN_LOOKALIKE_AUTOBAN_DISABLE=1
 DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=1
-
+DOORMAN_BUTTON_AUTOBAN_DISABLE=1
+DOORMAN_APPROVE_BUTTON=1
+DOORMAN_HIGH_CONFIDENCE_AUTOBAN_DISABLE=1
 DOORMAN_CAPTCHA_DISABLE=-1234,-5678
+DOORMAN_CHANNELS_IGNORE_REPORT=-34561
+DOORMAN_ADMIN_CHAT_MAP="-100111=777"
