--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -17,6 +17,7 @@ services:
       - DOORMAN_HIGH_CONFIDENCE_AUTOBAN_DISABLE=${DOORMAN_HIGH_CONFIDENCE_AUTOBAN_DISABLE}
       - DOORMAN_CHANNEL_AUTOBAN_EXCLUSION=${DOORMAN_CHANNEL_AUTOBAN_EXCLUSION}
       - DOORMAN_CHANNELS_IGNORE_REPORT=${DOORMAN_CHANNELS_IGNORE_REPORT}
+	  - DOORMAN_ADMIN_CHAT_MAP=${DOORMAN_ADMIN_CHAT_MAP}
 
     volumes:
       - /home/ClubDoorman/data:/app/data
