DOORMAN_CHANNELS_EMOJI_DISABLE new opt-out list

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -9,6 +9,7 @@ services:
       - DOORMAN_ADMIN_CHAT=${DOORMAN_ADMIN_CHAT}
       - DOORMAN_BLACKLIST_AUTOBAN_DISABLE=${DOORMAN_BLACKLIST_AUTOBAN_DISABLE}
       - DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=${DOORMAN_LOW_CONFIDENCE_HAM_ENABLE}
+      - DOORMAN_CHANNELS_EMOJI_DISABLE=${DOORMAN_CHANNELS_EMOJI_DISABLE}
     volumes:
       - ./ClubDoorman/data:/app/data
     restart: unless-stopped
